--- a/order.html
+++ b/order.html
@@ -6,7 +6,7 @@
     <title>Mos-burger - Order</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
-    <Link rel="stylesheet" href="CSS/order-style.css">
+    <link rel="stylesheet" href="CSS/order-style.css">
 </head>
 <body>
    
